--- a/VisualStudio2015Enterprise/VisualStudio2015Enterprise.nuspec
+++ b/VisualStudio2015Enterprise/VisualStudio2015Enterprise.nuspec
@@ -8,12 +8,10 @@
 		<owners>Kenneth Berntsen</owners>
 		<licenseUrl>http://msdn.microsoft.com/en-US/cc300389.aspx</licenseUrl>
 		<projectUrl>https://www.visualstudio.com/vs-2015-product-editions</projectUrl>
-		<iconUrl>https://raw.githubusercontent.com/KennethB/Chocolatey-Packages/master/icons/VS2015.png</iconUrl>
+		<iconUrl>https://raw.githubusercontent.com/neutmute/chocolatey-vs/master/icons/VS2015.png</iconUrl>
 		<packageSourceUrl>https://github.com/KennethB/Chocolatey-Packages/tree/master/VisualStudio2015Enterprise</packageSourceUrl>
 		<docsUrl>https://msdn.microsoft.com/library</docsUrl>
-		<!--<projectSourceUrl>https://github.com/jivkok/Chocolatey-Packages/raw/master/VisualStudioEnterprise</projectSourceUrl>
-		<mailingListUrl></mailingListUrl>
-		<bugTrackerUrl></bugTrackerUrl>-->
+		<projectSourceUrl>https://github.com/neutmute/chocolatey-vs</projectSourceUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>Enterprise grade solution with advanced capabilities for teams working on projects of any size or complexity, including advanced testing and DevOps</summary>
 		<tags>Microsoft Visual Studio 2015 Enterprise IDE admin</tags>
