--- a/VisualStudio2015Enterprise/VisualStudio2015Enterprise.nuspec
+++ b/VisualStudio2015Enterprise/VisualStudio2015Enterprise.nuspec
@@ -5,13 +5,12 @@
 		<version>14.2.0.01</version>
 		<title>Visual Studio 2015 Enterprise Update 2</title>
 		<authors>Microsoft</authors>
-		<owners>Kenneth Berntsen</owners>
+		<owners>neutmute</owners>
 		<licenseUrl>http://msdn.microsoft.com/en-US/cc300389.aspx</licenseUrl>
 		<projectUrl>https://www.visualstudio.com/vs-2015-product-editions</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/neutmute/chocolatey-vs/master/icons/VS2015.png</iconUrl>
-		<packageSourceUrl>https://github.com/KennethB/Chocolatey-Packages/tree/master/VisualStudio2015Enterprise</packageSourceUrl>
+		<packageSourceUrl>https://github.com/neutmute/chocolatey-vs</packageSourceUrl>
 		<docsUrl>https://msdn.microsoft.com/library</docsUrl>
-		<projectSourceUrl>https://github.com/neutmute/chocolatey-vs</projectSourceUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>Enterprise grade solution with advanced capabilities for teams working on projects of any size or complexity, including advanced testing and DevOps</summary>
 		<tags>Microsoft Visual Studio 2015 Enterprise IDE admin</tags>
@@ -28,7 +27,7 @@ You can customize the installation either by specifying your own installation co
 Optional features (Sql tools, phone tools, etc.) are available but not installed by default.
 To specify the features you want installed you can download the AdminDeployment.xml and modify it to support your needs.
 
-https://raw.githubusercontent.com/KennethB/Chocolatey-Packages/master/VisualStudio2015Enterprise/Tools/AdminDeployment.xml
+https://raw.githubusercontent.com/neutmute/Chocolatey-Packages/master/VisualStudio2015Enterprise/Tools/AdminDeployment.xml
 Specifying the optional features above modifies the configuration file used during installation (AdminDeployment.xml). If that is not enough you can provide this file on your own.
 Example:
 choco install VisualStudio2015Enterprise -packageParameters "--AdminFile c:\path to your\AdminDeployment.xml"
